fixed css for datasets on small screen

--- a/src/css/mca-header-and-footer.css
+++ b/src/css/mca-header-and-footer.css
@@ -113,7 +113,7 @@ header h2 { margin: 0; padding: 0.5rem; line-height: 1em; grid-column-start: 2; 
   .datasets th, .datasets td { flex: 0 0 25% }
   .datasets th:nth-of-type(3), .datasets td:nth-of-type(3) { flex: 0 0 40% }
   .datasets tr th:nth-of-type(4) { display: none }
-  .datasets tr td:nth-of-type(4) { flex: 0 0 100%; padding-left: 25%; border-bottom: 1px solid #999; font-size: 80% }
+  .datasets tr td:nth-of-type(4) { flex: 0 0 72%; padding-left: 25%; border-bottom: 1px solid #999; font-size: 80% }
 }
 
 /*footer div { display: flex;  justify-content: space-between; }
